--- a/site/about.html
+++ b/site/about.html
@@ -459,69 +459,103 @@
 
     <style>
         .philosophy-container {
-            background-color: #000000;
-            padding: 64px 24px;
-            margin-left: -24px;
-            margin-right: -24px;
-            border-top: 8px solid #FFFF00;
-            border-bottom: 8px solid #FFFF00;
+            background: linear-gradient(135deg, #FF69B4 0%, #00BFFF 100%);
+            padding: 80px 48px;
+            margin-left: -48px;
+            margin-right: -48px;
+            border-top: 12px solid #000000;
+            border-bottom: 12px solid #000000;
+            box-shadow: 0 16px 0 #FFFF00;
         }
 
         .philosophy-container h2 {
-            color: #FFFF00;
+            color: #FFFFFF;
             text-align: center;
-            margin-bottom: 48px;
+            margin-bottom: 64px;
+            font-size: 64px;
+            text-shadow: 6px 6px 0 #000000;
         }
 
         .philosophy-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 32px;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 40px;
             max-width: 1400px;
             margin: 0 auto;
         }
 
         .philosophy-card {
             background-color: #FFFFFF;
-            border: 5px solid #FFFF00;
-            padding: 32px;
+            border: 8px solid #000000;
+            padding: 48px;
+            box-shadow: 12px 12px 0 #FFFF00;
+        }
+
+        .philosophy-card:nth-child(2) {
+            box-shadow: 12px 12px 0 #00FF7F;
+        }
+
+        .philosophy-card:nth-child(3) {
+            box-shadow: 12px 12px 0 #FF69B4;
+        }
+
+        .philosophy-card:nth-child(4) {
+            box-shadow: 12px 12px 0 #00BFFF;
         }
 
         .philosophy-number {
-            font-size: 72px;
-            font-weight: bold;
-            color: #FFFF00;
-            -webkit-text-stroke: 3px #000000;
+            font-size: 96px;
+            font-weight: 900;
+            color: #FF69B4;
+            -webkit-text-stroke: 4px #000000;
             line-height: 1;
-            margin-bottom: 16px;
+            margin-bottom: 24px;
+        }
+
+        .philosophy-card:nth-child(2) .philosophy-number {
+            color: #00FF7F;
+        }
+
+        .philosophy-card:nth-child(3) .philosophy-number {
+            color: #00BFFF;
+        }
+
+        .philosophy-card:nth-child(4) .philosophy-number {
+            color: #FFFF00;
         }
 
         .philosophy-card h3 {
-            font-size: 24px;
-            margin-bottom: 16px;
+            font-size: 28px;
+            margin-bottom: 20px;
+            border-bottom: 4px solid #000000;
+            padding-bottom: 12px;
         }
 
         .philosophy-card p {
-            font-size: 14px;
-            line-height: 1.4;
-            margin-bottom: 12px;
+            font-size: 16px;
+            line-height: 1.6;
+            margin-bottom: 16px;
         }
 
         .philosophy-example {
-            margin-top: 24px;
-            padding-top: 24px;
-            border-top: 3px solid #000000;
+            margin-top: 32px;
+            padding-top: 32px;
+            border-top: 6px solid #000000;
         }
 
         .philosophy-example h4 {
-            font-size: 14px;
-            margin-bottom: 12px;
+            font-size: 18px;
+            margin-bottom: 16px;
+            color: #FF69B4;
         }
 
         .philosophy-example p {
-            font-size: 13px;
-            margin-bottom: 4px;
+            font-size: 15px;
+            margin-bottom: 8px;
             font-family: 'Courier New', monospace;
+            background-color: #FFFF00;
+            padding: 8px 12px;
+            border: 3px solid #000000;
         }
 
         .characteristics-deep {
@@ -530,61 +564,78 @@
 
         .characteristics-deep > h2 {
             text-align: center;
-            margin-bottom: 48px;
+            margin-bottom: 64px;
+            font-size: 64px;
         }
 
         .char-section {
-            border: 5px solid #000000;
-            margin-bottom: 32px;
+            border: 10px solid #000000;
+            margin-bottom: 48px;
+            box-shadow: 16px 16px 0 #FF69B4;
+        }
+
+        .char-section:nth-child(odd) {
+            box-shadow: 16px 16px 0 #00BFFF;
         }
 
         .char-header {
             background-color: #FFFF00;
-            padding: 20px 32px;
-            border-bottom: 5px solid #000000;
+            padding: 32px 48px;
+            border-bottom: 8px solid #000000;
+        }
+
+        .char-section:nth-child(even) .char-header {
+            background-color: #00FF7F;
         }
 
         .char-header h3 {
             margin: 0;
-            font-size: 28px;
+            font-size: 40px;
+            text-shadow: 4px 4px 0 rgba(0,0,0,0.2);
         }
 
         .char-content {
-            padding: 32px;
+            padding: 48px;
             background-color: #FFFFFF;
         }
 
         .char-do-dont {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 32px;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 40px;
         }
 
         .char-do, .char-dont {
-            border: 4px solid #000000;
-            padding: 24px;
+            border: 6px solid #000000;
+            padding: 32px;
         }
 
         .char-do {
             background-color: #FFFFFF;
+            box-shadow: 10px 10px 0 #00FF7F;
         }
 
         .char-dont {
-            background-color: #000000;
+            background: linear-gradient(135deg, #FF4444 0%, #FF69B4 100%);
             color: #FFFFFF;
+            box-shadow: 10px 10px 0 #000000;
         }
 
         .char-do h4, .char-dont h4 {
-            font-size: 20px;
-            margin-bottom: 16px;
+            font-size: 24px;
+            margin-bottom: 20px;
+            border-bottom: 4px solid #000000;
+            padding-bottom: 12px;
         }
 
         .char-do h4 {
             color: #000000;
+            border-bottom-color: #00FF7F;
         }
 
         .char-dont h4 {
-            color: #FFFF00;
+            color: #FFFFFF;
+            border-bottom-color: #FFFFFF;
         }
 
         .char-do ul, .char-dont ul {
@@ -593,12 +644,17 @@
         }
 
         .char-do li, .char-dont li {
-            padding: 8px 0;
-            padding-left: 24px;
-            border-left: 4px solid #FFFF00;
-            margin-bottom: 8px;
-            font-size: 14px;
-            line-height: 1.3;
+            padding: 12px 16px;
+            padding-left: 32px;
+            border-left: 8px solid #00FF7F;
+            margin-bottom: 12px;
+            font-size: 16px;
+            line-height: 1.5;
+        }
+
+        .char-dont li {
+            border-left-color: #FFFFFF;
+            background-color: rgba(0,0,0,0.2);
         }
 
         .comparison-section {
@@ -606,15 +662,18 @@
         }
 
         .comparison-box {
-            border: 5px solid #000000;
+            border: 10px solid #000000;
             background-color: #FFFFFF;
+            box-shadow: 16px 16px 0 #00BFFF;
         }
 
         .comparison-box h2 {
             background-color: #FFFF00;
-            padding: 24px 32px;
+            padding: 32px 48px;
             margin: 0;
-            border-bottom: 5px solid #000000;
+            border-bottom: 8px solid #000000;
+            font-size: 48px;
+            text-shadow: 3px 3px 0 rgba(0,0,0,0.1);
         }
 
         .comparison-table {
@@ -624,8 +683,8 @@
 
         .comparison-row {
             display: grid;
-            grid-template-columns: 200px 1fr 1fr;
-            border-bottom: 3px solid #000000;
+            grid-template-columns: 240px 1fr 1fr;
+            border-bottom: 6px solid #000000;
         }
 
         .comparison-row:last-child {
@@ -633,18 +692,35 @@
         }
 
         .comparison-header-row {
-            background-color: #000000;
+            background: linear-gradient(135deg, #FF69B4 0%, #00BFFF 100%);
             color: #FFFFFF;
         }
 
+        .comparison-header-row .comparison-cell {
+            font-size: 20px;
+            font-weight: 900;
+            padding: 24px;
+        }
+
         .comparison-cell {
-            padding: 16px 24px;
-            border-right: 3px solid #000000;
-            font-size: 14px;
+            padding: 20px 24px;
+            border-right: 6px solid #000000;
+            font-size: 16px;
+            line-height: 1.6;
         }
 
         .comparison-cell:last-child {
             border-right: none;
+        }
+
+        .comparison-cell:first-child {
+            background-color: #FFFF00;
+            font-weight: 900;
+            font-size: 18px;
+        }
+
+        .comparison-row:nth-child(even) .comparison-cell:first-child {
+            background-color: #00FF7F;
         }
 
         .mistakes-section {
@@ -653,44 +729,53 @@
 
         .mistakes-section > h2 {
             text-align: center;
-            margin-bottom: 48px;
+            margin-bottom: 64px;
+            font-size: 64px;
         }
 
         .mistakes-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 24px;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 32px;
         }
 
         .mistake-card {
-            background-color: #000000;
+            background: linear-gradient(135deg, #FF4444 0%, #FF69B4 100%);
             color: #FFFFFF;
-            border: 4px solid #FFFF00;
-            padding: 24px;
+            border: 8px solid #000000;
+            padding: 32px;
+            box-shadow: 12px 12px 0 #000000;
+        }
+
+        .mistake-card:nth-child(even) {
+            background: linear-gradient(135deg, #000000 0%, #FF4444 100%);
         }
 
         .mistake-card h3 {
             color: #FFFF00;
-            font-size: 16px;
-            margin-bottom: 8px;
+            font-size: 20px;
+            margin-bottom: 12px;
+            border-bottom: 4px solid #FFFF00;
+            padding-bottom: 8px;
         }
 
         .mistake-card h4 {
-            font-size: 20px;
-            margin-bottom: 16px;
+            font-size: 26px;
+            margin-bottom: 20px;
         }
 
         .mistake-card p {
-            font-size: 14px;
-            line-height: 1.4;
-            margin-bottom: 12px;
+            font-size: 16px;
+            line-height: 1.6;
+            margin-bottom: 16px;
         }
 
         .mistake-why {
-            margin-top: 16px;
-            padding-top: 16px;
-            border-top: 2px solid #FFFF00;
+            margin-top: 20px;
+            padding-top: 20px;
+            border-top: 4px solid #FFFF00;
             font-style: italic;
+            font-weight: bold;
         }
 
         .resources-section {
@@ -702,53 +787,93 @@
         }
 
         .ux-box {
-            background-color: #000000;
-            border: 8px solid #FFFF00;
-            padding: 48px;
+            background: linear-gradient(135deg, #00BFFF 0%, #00FF7F 100%);
+            border: 12px solid #000000;
+            padding: 64px;
+            box-shadow: 20px 20px 0 #FF69B4;
         }
 
         .ux-box h2 {
-            color: #FFFF00;
+            color: #FFFFFF;
             text-align: center;
-            margin-bottom: 24px;
+            margin-bottom: 32px;
+            font-size: 64px;
+            text-shadow: 6px 6px 0 #000000;
         }
 
         .ux-intro {
             color: #FFFFFF;
             text-align: center;
-            font-size: 18px;
-            margin-bottom: 48px;
+            font-size: 22px;
+            margin-bottom: 64px;
+            font-weight: bold;
         }
 
         .ux-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 24px;
-            margin-bottom: 32px;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 32px;
+            margin-bottom: 48px;
         }
 
         .ux-practice {
             background-color: #FFFFFF;
-            border: 4px solid #FFFF00;
-            padding: 24px;
+            border: 8px solid #000000;
+            padding: 32px;
+            box-shadow: 10px 10px 0 #FFFF00;
+        }
+
+        .ux-practice:nth-child(2) {
+            box-shadow: 10px 10px 0 #FF69B4;
+        }
+
+        .ux-practice:nth-child(3) {
+            box-shadow: 10px 10px 0 #00BFFF;
+        }
+
+        .ux-practice:nth-child(4) {
+            box-shadow: 10px 10px 0 #00FF7F;
+        }
+
+        .ux-practice:nth-child(5) {
+            box-shadow: 10px 10px 0 #FFFF00;
+        }
+
+        .ux-practice:nth-child(6) {
+            box-shadow: 10px 10px 0 #FF69B4;
         }
 
         .ux-practice h3 {
-            font-size: 48px;
+            font-size: 64px;
+            color: #FF69B4;
+            -webkit-text-stroke: 3px #000000;
+            margin-bottom: 12px;
+            line-height: 1;
+        }
+
+        .ux-practice:nth-child(2) h3 {
+            color: #00BFFF;
+        }
+
+        .ux-practice:nth-child(3) h3 {
+            color: #00FF7F;
+        }
+
+        .ux-practice:nth-child(4) h3 {
             color: #FFFF00;
-            -webkit-text-stroke: 2px #000000;
-            margin-bottom: 8px;
         }
 
         .ux-practice h4 {
-            font-size: 18px;
-            margin-bottom: 12px;
+            font-size: 22px;
+            margin-bottom: 16px;
             color: #000000;
+            border-bottom: 4px solid #FF69B4;
+            padding-bottom: 12px;
         }
 
         .ux-practice p {
-            font-size: 14px;
-            line-height: 1.4;
+            font-size: 16px;
+            line-height: 1.6;
             margin: 0;
             color: #000000;
         }
@@ -756,44 +881,58 @@
         .ux-source {
             color: #FFFFFF;
             text-align: center;
-            font-size: 14px;
-            margin-top: 32px;
-            padding-top: 32px;
-            border-top: 3px solid #FFFF00;
+            font-size: 18px;
+            margin-top: 48px;
+            padding-top: 48px;
+            border-top: 6px solid #FFFFFF;
         }
 
         .ux-source a {
             color: #FFFF00;
-            font-weight: bold;
+            font-weight: 900;
+            text-decoration-thickness: 4px;
         }
 
         .resources-box {
             background-color: #FFFF00;
-            border: 8px solid #000000;
-            padding: 48px;
-            box-shadow: 12px 12px 0 #000000;
+            border: 12px solid #000000;
+            padding: 64px;
+            box-shadow: 20px 20px 0 #00BFFF;
         }
 
         .resources-box h2 {
             text-align: center;
-            margin-bottom: 48px;
+            margin-bottom: 64px;
+            font-size: 64px;
+            text-shadow: 4px 4px 0 rgba(0,0,0,0.2);
         }
 
         .resources-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 32px;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 40px;
         }
 
         .resource-category {
             background-color: #FFFFFF;
-            border: 4px solid #000000;
-            padding: 24px;
+            border: 6px solid #000000;
+            padding: 32px;
+            box-shadow: 10px 10px 0 #FF69B4;
+        }
+
+        .resource-category:nth-child(2) {
+            box-shadow: 10px 10px 0 #00FF7F;
+        }
+
+        .resource-category:nth-child(3) {
+            box-shadow: 10px 10px 0 #00BFFF;
         }
 
         .resource-category h3 {
-            font-size: 18px;
-            margin-bottom: 16px;
+            font-size: 24px;
+            margin-bottom: 20px;
+            border-bottom: 4px solid #000000;
+            padding-bottom: 12px;
         }
 
         .resource-category ul {
