--- a/site/collaboration.html
+++ b/site/collaboration.html
@@ -335,73 +335,106 @@
 
         .process-section > h2 {
             text-align: center;
-            margin-bottom: 48px;
+            margin-bottom: 64px;
+            font-size: 64px;
+            text-shadow: 6px 6px 0 #000000;
         }
 
         .process-phase {
-            border: 5px solid #000000;
+            border: 10px solid #000000;
             background-color: #FFFFFF;
-            margin-bottom: 32px;
+            margin-bottom: 48px;
+            box-shadow: 16px 16px 0 #FF69B4;
+        }
+
+        .process-phase:nth-child(3) {
+            box-shadow: 16px 16px 0 #00BFFF;
+        }
+
+        .process-phase:nth-child(4) {
+            box-shadow: 16px 16px 0 #00FF7F;
+        }
+
+        .process-phase:nth-child(5) {
+            box-shadow: 16px 16px 0 #FFFF00;
+        }
+
+        .process-phase:nth-child(6) {
+            box-shadow: 16px 16px 0 #FF4444;
         }
 
         .phase-alt {
-            background-color: #000000;
+            background: linear-gradient(135deg, #FF69B4 0%, #00BFFF 100%);
             color: #FFFFFF;
         }
 
         .phase-header {
             background-color: #FFFF00;
             color: #000000;
-            padding: 24px 32px;
-            border-bottom: 5px solid #000000;
+            padding: 32px 48px;
+            border-bottom: 8px solid #000000;
             display: flex;
             justify-content: space-between;
             align-items: center;
             flex-wrap: wrap;
-            gap: 16px;
+            gap: 24px;
+        }
+
+        .phase-alt .phase-header {
+            background-color: #00BFFF;
         }
 
         .phase-header h3 {
             margin: 0;
-            font-size: 28px;
+            font-size: 40px;
+            font-weight: 900;
+            text-shadow: 4px 4px 0 rgba(0,0,0,0.3);
         }
 
         .phase-label {
-            font-size: 14px;
-            font-weight: bold;
-            padding: 8px 16px;
+            font-size: 18px;
+            font-weight: 900;
+            padding: 12px 24px;
             background-color: #000000;
             color: #FFFF00;
-            border: 3px solid #000000;
+            border: 6px solid #000000;
+            box-shadow: 6px 6px 0 #FF69B4;
         }
 
         .phase-content {
-            padding: 32px;
+            padding: 48px;
         }
 
         .phase-content h4 {
-            font-size: 20px;
-            margin: 24px 0 12px 0;
+            font-size: 28px;
+            margin: 32px 0 16px 0;
+            font-weight: 900;
+            background-color: #FFFF00;
+            display: inline-block;
+            padding: 8px 16px;
+            border: 4px solid #000000;
+            box-shadow: 4px 4px 0 #FF69B4;
         }
 
         .phase-content p {
-            font-size: 16px;
-            line-height: 1.4;
-            margin-bottom: 16px;
+            font-size: 18px;
+            line-height: 1.6;
+            margin-bottom: 24px;
         }
 
         .phase-content ul {
-            margin: 16px 0;
+            margin: 24px 0;
             padding-left: 0;
             list-style: none;
         }
 
         .phase-content li {
-            padding: 8px 0 8px 24px;
-            border-left: 4px solid #FFFF00;
-            margin-bottom: 8px;
-            font-size: 15px;
-            line-height: 1.4;
+            padding: 12px 0 12px 32px;
+            border-left: 8px solid #FFFF00;
+            margin-bottom: 12px;
+            font-size: 18px;
+            line-height: 1.6;
+            background-color: rgba(255, 255, 0, 0.1);
         }
 
         .reflections-section {
@@ -409,37 +442,57 @@
         }
 
         .reflections-box {
-            background-color: #000000;
-            border: 8px solid #FFFF00;
-            padding: 48px;
+            background: linear-gradient(135deg, #00BFFF 0%, #00FF7F 100%);
+            border: 12px solid #000000;
+            padding: 64px;
+            box-shadow: 20px 20px 0 #FF69B4;
         }
 
         .reflections-box h2 {
-            color: #FFFF00;
+            color: #FFFFFF;
             text-align: center;
-            margin-bottom: 48px;
+            margin-bottom: 64px;
+            font-size: 64px;
+            font-weight: 900;
+            text-shadow: 6px 6px 0 #000000;
         }
 
         .reflection-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 24px;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 32px;
         }
 
         .reflection-card {
             background-color: #FFFFFF;
-            border: 4px solid #FFFF00;
-            padding: 24px;
+            border: 8px solid #000000;
+            padding: 32px;
+            box-shadow: 12px 12px 0 #FFFF00;
+        }
+
+        .reflection-card:nth-child(2) {
+            box-shadow: 12px 12px 0 #FF69B4;
+        }
+
+        .reflection-card:nth-child(3) {
+            box-shadow: 12px 12px 0 #00BFFF;
+        }
+
+        .reflection-card:nth-child(4) {
+            box-shadow: 12px 12px 0 #00FF7F;
         }
 
         .reflection-card h3 {
-            font-size: 18px;
-            margin-bottom: 16px;
+            font-size: 24px;
+            margin-bottom: 20px;
+            font-weight: 900;
+            border-bottom: 6px solid #FFFF00;
+            padding-bottom: 8px;
         }
 
         .reflection-card p {
-            font-size: 14px;
-            line-height: 1.4;
+            font-size: 16px;
+            line-height: 1.6;
             margin: 0;
         }
 
@@ -449,39 +502,56 @@
 
         .challenges-section > h2 {
             text-align: center;
-            margin-bottom: 48px;
+            margin-bottom: 64px;
+            font-size: 64px;
+            text-shadow: 6px 6px 0 #000000;
         }
 
         .challenge-list {
             display: flex;
             flex-direction: column;
-            gap: 24px;
+            gap: 32px;
         }
 
         .challenge-item {
-            border: 5px solid #000000;
-            padding: 32px;
+            border: 10px solid #000000;
+            padding: 48px;
             background-color: #FFFFFF;
+            box-shadow: 16px 16px 0 #FF69B4;
+        }
+
+        .challenge-item:nth-child(2) {
+            box-shadow: 16px 16px 0 #00BFFF;
+        }
+
+        .challenge-item:nth-child(3) {
+            box-shadow: 16px 16px 0 #00FF7F;
+        }
+
+        .challenge-item:nth-child(4) {
+            box-shadow: 16px 16px 0 #FFFF00;
         }
 
         .challenge-item h3 {
-            font-size: 22px;
-            margin-bottom: 16px;
+            font-size: 28px;
+            margin-bottom: 24px;
             color: #000000;
             background-color: #FFFF00;
             display: inline-block;
-            padding: 8px 16px;
-            border: 3px solid #000000;
+            padding: 12px 24px;
+            border: 6px solid #000000;
+            box-shadow: 6px 6px 0 #FF69B4;
+            font-weight: 900;
         }
 
         .challenge-item p {
-            font-size: 15px;
-            line-height: 1.4;
-            margin-bottom: 12px;
+            font-size: 18px;
+            line-height: 1.6;
+            margin-bottom: 16px;
         }
 
         .challenge-item strong {
-            font-weight: bold;
+            font-weight: 900;
         }
 
         .decisions-section {
@@ -489,15 +559,20 @@
         }
 
         .decisions-box {
-            border: 5px solid #000000;
+            border: 10px solid #000000;
             background-color: #FFFFFF;
+            box-shadow: 16px 16px 0 #00BFFF;
         }
 
         .decisions-box h2 {
-            background-color: #FFFF00;
-            padding: 24px 32px;
+            background: linear-gradient(135deg, #FF69B4 0%, #00BFFF 100%);
+            color: #FFFFFF;
+            padding: 32px 48px;
             margin: 0;
-            border-bottom: 5px solid #000000;
+            border-bottom: 8px solid #000000;
+            font-size: 48px;
+            font-weight: 900;
+            text-shadow: 4px 4px 0 #000000;
         }
 
         .decisions-table {
@@ -507,11 +582,11 @@
 
         .decisions-table th,
         .decisions-table td {
-            border: 3px solid #000000;
-            padding: 16px;
+            border: 6px solid #000000;
+            padding: 20px;
             text-align: left;
-            font-size: 14px;
-            line-height: 1.4;
+            font-size: 16px;
+            line-height: 1.6;
         }
 
         .decisions-table thead {
@@ -520,12 +595,42 @@
         }
 
         .decisions-table th {
-            font-weight: bold;
-            font-size: 16px;
+            font-weight: 900;
+            font-size: 20px;
+        }
+
+        .decisions-table tbody tr:nth-child(odd) {
+            background-color: #FFFFFF;
         }
 
         .decisions-table tbody tr:nth-child(even) {
-            background-color: #FFFFFF;
+            background-color: rgba(255, 255, 0, 0.2);
+        }
+
+        .decisions-table tbody tr:nth-child(1) td:first-child,
+        .decisions-table tbody tr:nth-child(2) td:first-child {
+            background-color: #FFFF00;
+            font-weight: 900;
+        }
+
+        .decisions-table tbody tr:nth-child(3) td:first-child,
+        .decisions-table tbody tr:nth-child(4) td:first-child {
+            background-color: #FF69B4;
+            color: #FFFFFF;
+            font-weight: 900;
+        }
+
+        .decisions-table tbody tr:nth-child(5) td:first-child,
+        .decisions-table tbody tr:nth-child(6) td:first-child {
+            background-color: #00BFFF;
+            color: #FFFFFF;
+            font-weight: 900;
+        }
+
+        .decisions-table tbody tr:nth-child(7) td:first-child,
+        .decisions-table tbody tr:nth-child(8) td:first-child {
+            background-color: #00FF7F;
+            font-weight: 900;
         }
 
         .future-section {
@@ -534,36 +639,57 @@
 
         .future-box {
             background-color: #FFFF00;
-            border: 8px solid #000000;
-            padding: 48px;
-            box-shadow: 12px 12px 0 #000000;
+            border: 12px solid #000000;
+            padding: 64px;
+            box-shadow: 20px 20px 0 #FF69B4;
         }
 
         .future-box h2 {
             text-align: center;
-            margin-bottom: 48px;
+            margin-bottom: 64px;
+            font-size: 64px;
+            font-weight: 900;
+            text-shadow: 4px 4px 0 #000000;
         }
 
         .future-items {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 24px;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 32px;
         }
 
         .future-item {
             background-color: #FFFFFF;
-            border: 4px solid #000000;
-            padding: 24px;
+            border: 8px solid #000000;
+            padding: 32px;
+            box-shadow: 10px 10px 0 #00BFFF;
+        }
+
+        .future-item:nth-child(2) {
+            box-shadow: 10px 10px 0 #00FF7F;
+        }
+
+        .future-item:nth-child(3) {
+            box-shadow: 10px 10px 0 #FF69B4;
+        }
+
+        .future-item:nth-child(4) {
+            box-shadow: 10px 10px 0 #FF4444;
         }
 
         .future-item h4 {
-            font-size: 16px;
-            margin-bottom: 12px;
+            font-size: 22px;
+            margin-bottom: 16px;
+            font-weight: 900;
+            background-color: #FFFF00;
+            display: inline-block;
+            padding: 8px 16px;
+            border: 4px solid #000000;
         }
 
         .future-item p {
-            font-size: 14px;
-            line-height: 1.4;
+            font-size: 16px;
+            line-height: 1.6;
             margin: 0;
         }
 
@@ -572,54 +698,76 @@
         }
 
         .conclusion-box {
-            background-color: #000000;
+            background: linear-gradient(135deg, #000000 0%, #FF4444 100%);
             color: #FFFFFF;
-            border: 8px solid #FFFF00;
-            padding: 48px;
+            border: 12px solid #FFFF00;
+            padding: 64px;
+            box-shadow: 20px 20px 0 #00BFFF;
         }
 
         .conclusion-box h2 {
             color: #FFFF00;
             text-align: center;
-            margin-bottom: 32px;
+            margin-bottom: 48px;
+            font-size: 64px;
+            font-weight: 900;
+            text-shadow: 6px 6px 0 #000000;
         }
 
         .conclusion-box p {
-            font-size: 18px;
-            line-height: 1.5;
-            margin-bottom: 24px;
+            font-size: 20px;
+            line-height: 1.6;
+            margin-bottom: 32px;
         }
 
         .conclusion-signature {
             text-align: right;
             font-style: italic;
-            font-size: 16px;
-            margin-top: 32px;
+            font-size: 18px;
+            margin-top: 48px;
             color: #FFFF00;
+            font-weight: 900;
         }
 
         @media (max-width: 768px) {
+            .process-section > h2,
+            .challenges-section > h2,
+            .reflections-box h2,
+            .future-box h2,
+            .conclusion-box h2 {
+                font-size: 48px;
+            }
+
             .phase-content {
-                padding: 24px;
+                padding: 32px;
             }
 
             .reflections-box,
             .future-box,
             .conclusion-box {
-                padding: 24px;
+                padding: 32px;
             }
 
             .decisions-table {
-                font-size: 12px;
+                font-size: 14px;
             }
 
             .decisions-table th,
             .decisions-table td {
-                padding: 12px 8px;
+                padding: 12px;
             }
 
             .challenge-item {
-                padding: 24px;
+                padding: 32px;
+            }
+
+            .phase-header h3 {
+                font-size: 32px;
+            }
+
+            .reflection-card h3,
+            .challenge-item h3 {
+                font-size: 22px;
             }
         }
 
@@ -627,6 +775,22 @@
             .decisions-table {
                 display: block;
                 overflow-x: auto;
+            }
+
+            .process-section > h2,
+            .challenges-section > h2,
+            .reflections-box h2,
+            .future-box h2,
+            .conclusion-box h2 {
+                font-size: 36px;
+            }
+
+            .phase-content,
+            .reflections-box,
+            .future-box,
+            .conclusion-box,
+            .challenge-item {
+                padding: 24px;
             }
         }
     </style>
